// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Klotty sends email 1`] = `
Object {
  "created_at": "123",
  "from": "bu@klotty.com",
  "id": "1234",
  "to": "zeno@klotty.com",
}
`;

exports[`Klotty sends email with multiple bcc recipients 1`] = `
Object {
  "bcc": Array [
    "foo@klotty.com",
    "bar@klotty.com",
  ],
  "created_at": "123",
  "from": "admin@klotty.com",
  "id": "1234",
  "to": "bu@klotty.com",
}
`;

exports[`Klotty sends email with multiple cc recipients 1`] = `
Object {
  "cc": Array [
    "foo@klotty.com",
    "bar@klotty.com",
  ],
  "created_at": "123",
  "from": "admin@klotty.com",
  "id": "1234",
  "to": "bu@klotty.com",
}
`;

exports[`Klotty sends email with multiple recipients 1`] = `
Object {
  "created_at": "123",
  "from": "admin@klotty.com",
  "id": "1234",
  "to": Array [
    "bu@klotty.com",
    "zeno@klotty.com",
  ],
}
`;

exports[`Klotty throws API key error 1`] = `"Missing API key. Pass it to the constructor \`new Klotty(\\"kl_123\\")\`"`;
